--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -75,11 +75,162 @@
     "\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "16cc9ce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total price is 20\n",
+      "total order = 3,percentage = 60.0\n",
+      "order statistics:\n",
+      "Total products ordered : 3\n",
+      "Percentage of products ordered 60.0%\n",
+      "product : t-shirt, quantity : 11\n",
+      "product : mug, quantity : 10\n",
+      "product : hat, quantity : 10\n",
+      "product : book, quantity : 10\n",
+      "product : keychain, quantity : 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.\n",
+    "def initialize_inventory(products):\n",
+    "    '''\n",
+    "    TO DO\n",
+    "    Review your code from the previous exercise and identify areas where you can apply comprehension to simplify and streamline your code. \n",
+    "\n",
+    "    - *Hint: Apply it to initialize inventory, updating the inventory and printing the updated inventory.*\n",
+    "    \n",
+    "    - For example, in initializing the inventory, we could have:\n",
+    "    \n",
+    "\n",
+    "        def initialize_inventory(products):\n",
+    "            inventory = {product: int(input(f\"Enter the quantity of {product}s available: \")) for product in products}\n",
+    "            return inventory\n",
+    "    '''\n",
+    "    inventory = {product : int(input(f\"Enter the quantity of {product} : \")) for product in products}\n",
+    "   \n",
+    "    return inventory\n",
+    "\n",
+    "    \n",
+    "#2\n",
+    "def get_customer_orders(products):\n",
+    "    '''\n",
+    "    TO DO \n",
+    "    Modify the function get_customer_orders so it prompts the user to enter the number \n",
+    "    of customer orders and gathers the product names using a loop and user input. Use comprehension.\n",
+    "    '''\n",
+    "    customer_orders = set()\n",
+    "    num_items = int(input(\"enter the number of customer orders : \"))\n",
+    "    for _ in range(num_items): #from this link https://stackoverflow.com/questions/5893163/what-is-the-purpose-of-the-single-underscore-variable-in-python\n",
+    "        order = input(\"Enter the name of the product you want in your order \").lower()\n",
+    "\n",
+    "        if order in products :\n",
+    "            customer_orders.add(order)\n",
+    "            # confirmation = input(\"Do want to order more ? yes or no ?\").strip().lower()\n",
+    "\n",
+    "            # if confirmation == \"no\": \n",
+    "            #     break\n",
+    "        else:\n",
+    "            print(\"product not available\")\n",
+    "\n",
+    "\n",
+    "    return customer_orders\n",
+    "\n",
+    "#3. \n",
+    "def total_price_calculator(customer_order):\n",
+    "    \"\"\"\n",
+    "    TO DO \n",
+    "    Add a new function to calculate the total price of the customer order. \n",
+    "    For each product in customer_orders, prompt the user to enter the price of that product. \n",
+    "    Use comprehension to calculate the total price. \n",
+    "    Note: assume that the user can only have 1 unit of each product.\n",
+    "    \"\"\"\n",
+    "    prices = {product : int(input(f\"Enter the price for {product}\")) for product in customer_order}\n",
+    "    total = sum(prices.values())\n",
+    "    return total\n",
+    "\n",
+    "\n",
+    "\n",
+    "#4.\n",
+    "\n",
+    "def update_inventory(customer_orders,inventory):\n",
+    "    \"\"\"\n",
+    "    TO DO \n",
+    "    Modify the update_inventory function to remove the product from the inventory \n",
+    "    if its quantity becomes zero after fulfilling the customer orders. \n",
+    "    Use comprehension to filter out the products with a quantity of zero from the inventory\n",
+    "    \"\"\"\n",
+    "    # for i in customer_orders:\n",
+    "    #     if inventory[i] > 0 and inventory[i] > 0:\n",
+    "    #         inventory[i] -= 1\n",
+    "    inventory = {product: quantity-1 if product in customer_orders else quantity for product, quantity in inventory.items()}\n",
+    "    inventory = {product: quantity for product, quantity in inventory.items() if quantity > 0}\n",
+    "\n",
+    "    return inventory\n",
+    "#5. \n",
+    "def calculate_order_statistics(customer_orders,products):\n",
+    " \n",
+    "    total_order = len(customer_orders)\n",
+    "\n",
+    "    percentage_order = (total_order/len(products))*100\n",
+    "\n",
+    "    print(f\"total order = {total_order},percentage = {percentage_order}\")\n",
+    "\n",
+    "    return total_order, percentage_order\n",
+    "\n",
+    "\n",
+    "#6.\n",
+    "def print_order_statistics(order_statistics):\n",
+    "\n",
+    "    print(\"order statistics:\")\n",
+    "    print(f\"Total products ordered : {order_statistics[0]}\")\n",
+    "    print(f\"Percentage of products ordered {order_statistics[1]}%\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "#7.\n",
+    "def print_updated_inventory(inventory):\n",
+    "\n",
+    "    for i,y in inventory.items():\n",
+    "        print(f\"product : {i}, quantity : {y}\")\n",
+    "\n",
+    "#8. \n",
+    "def lauch_sequence ():\n",
+    "  \n",
+    "    products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "    inventory = initialize_inventory(products)\n",
+    "    customer_orders = get_customer_orders(products)\n",
+    "    total_prices= total_price_calculator(customer_orders)\n",
+    "    print(\"total price is\",total_prices)\n",
+    "    order_statistics = calculate_order_statistics(customer_orders, products)\n",
+    "    print_order_statistics(order_statistics)\n",
+    "    updated_inventory = update_inventory(customer_orders, inventory)\n",
+    "    print(\"Updated inventory :\")\n",
+    "    print_updated_inventory(updated_inventory)\n",
+    "\n",
+    "lauch_sequence()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "070ca3bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
